--- a/src/main/resources/vertx-js/template/common.templ
+++ b/src/main/resources/vertx-js/template/common.templ
@@ -201,6 +201,8 @@ utils.convParamSetEnum(@{unwrappedName}, function(val) { return Packages.@{unwra
 		@else{}
 @if{param.nullable}@{unwrappedName} == null ? null : @end{}utils.convParamSetBasicOther(@{unwrappedName})
 		@end{}
+	@else{unwrappedType.kind == CLASS_TYPE_LITERAL}
+		utils.javaTypeOf(@{unwrappedName})
 	@else{unwrappedType.kind == CLASS_MAP}
 		@if{unwrappedType.args[1].name == 'long' || unwrappedType.args[1].name == 'java.lang.Long'}
 utils.convParamMapLong(@{unwrappedName})
@@ -290,6 +292,8 @@ ar.result()
 						@if{param.nullable}(@end{}
 						typeof __args[@{cnt}] === 'string'
 						@if{param.nullable} || __args[@{cnt}] == null)@end{}
+					@else{param.type.kind == CLASS_TYPE_LITERAL}
+						typeof __args[@{cnt}] === 'function'
 					@else{param.type.kind == CLASS_API}
 						typeof __args[@{cnt}] === 'object' && @if{param.nullable}(__args[@{cnt}] == null || @end{}__args[@{cnt}]._jdel@if{param.nullable})@end{}
 					@else{param.type.kind == CLASS_JSON_ARRAY || param.type.kind == CLASS_LIST || param.type.kind == CLASS_SET}
