Implement the missing TCK bits

--- a/src/main/resources/vertx-js/template/js.templ
+++ b/src/main/resources/vertx-js/template/js.templ
@@ -97,6 +97,8 @@ utils.convReturnHandlerAsyncResult(@includeNamed{templ}, function(result) { retu
 		@else{}
 utils.convReturnHandler(@includeNamed{templ}, function(result) { return @includeNamed{'convParam';overloaded=false;param=new io.vertx.codegen.ParamInfo(0, "result", null, returnType.args[0])}; })
 		@end{}
+	@else{returnType.variable && method != null  && (classTypeParam = method.resolveClassTypeParam(returnType)) != null}
+utils.get_jtype(@{classTypeParam.name}).wrap(@includeNamed{templ})
 	@else{}
 	@comment{'This will probably happen if the return type is generic'}
 		@code{wrapper='utils.convReturnTypeUnknown'}
