--- a/src/main/resources/vertx-js/template/common.templ
+++ b/src/main/resources/vertx-js/template/common.templ
@@ -237,7 +237,6 @@ utils.convParamMapJsonArray(@{unwrappedName})
 @declare{'basicVal'}
 jVal
 @end{}
-
 @declare{'arVal'}
 ar.result()
 @end{}
@@ -246,13 +245,14 @@ ar.result()
 @comment{"============================"}
 
 @declare{'genMethod'}
-	@code{methodList = methodsByName.get(methodName)}
-	@if{methodFilter != null}
-		@code{methodList = new java.util.ArrayList()}
-		@foreach{method : methodsByName.get(methodName)}
-			@if{methodFilter(method)}
-				@code{methodList.add(method)}
+	@code{methodList = new java.util.ArrayList()}
+	@foreach{method : methodsByName.get(methodName)}
+		@if{methodFilter == null || methodFilter(method)}
+			@if{method.fluentFuture != null}
+				@comment{'Should we generate a return type with a JS Promise'}
+				@code{methodList.add(new io.vertx.codegen.MethodInfo(method.ownerTypes, method.name, method.kind, method.returnType, method.returnDescription, method.fluent, method.cacheReturn, method.params.subList(0, method.params.size() - 1), method.comment, method.doc, method.staticMethod, method.defaultMethod, method.typeParams))}
 			@end{}
+			@code{methodList.add(method)}
 		@end{}
 	@end{}
 	@if{methodList.size() > 0}
